buildscript {
	repositories {
    	mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2"
        }
    }
	dependencies {
		classpath 'org.xtext:xtext-gradle-plugin:3.0.1'
	}
}

ext.versions = [
    xtext: '2.36.0',
    elk: '0.11.0-SNAPSHOT',
    sprotty: '0.9.1',
    lsp4j: '0.8.0',
    jetty: '9.4.16.v20190411',
    slf4j: '1.7.24'
]

subprojects {
	repositories {
		mavenCentral()
		maven {
			url "https://repo1.maven.org/maven2/"
		}
		maven {
			name 'sonatype-snapshots'
			url 'https://oss.sonatype.org/content/repositories/snapshots/'
		}
	}
	
	group = 'de.cau.cs.kieler'
	version = '0.1.0'
	
	apply plugin: 'java'
	apply plugin: 'org.xtext.xtend' // Required for running xtext command below.
	apply plugin: 'eclipse'
	
	sourceCompatibility = '17'

	xtext {
		// Since the layout version projects don't contain xtext-related code,
		// the version has to be specified explicitly
		version = "${versions.xtext}"
	}
}
